--- a/config/blobs.yml
+++ b/config/blobs.yml
@@ -1,1 +1,13 @@
---- {}
+---
+cfops_linux_amd64/cfops_linux_amd64-1.0.0.tar.gz:
+  object_id: 51311b94-c4e3-444b-b70b-8e491e9ffd4b
+  sha: df9b59510df52773323a27e7e1cdc73e89d54da1
+  size: 2650506
+aws-cli/awscli-bundle.zip:
+  object_id: edc16386-4943-44f4-9c55-9c642ba9cdd4
+  sha: e143b79e93bd47151f26d8b6c0c55495b482cd3b
+  size: 5942366
+python/Python-2.7.8.tgz:
+  object_id: 33a4e959-8ce3-47cb-878d-e4256ce3b6f3
+  sha: 511960dd78451a06c9df76509635aeec05b2051a
+  size: 14846119
